hphp/test/zend/good/ext/sockets/tests/socket_sentto_recvfrom_ipv6_udp.php.skipif
<?hh
<<__EntryPoint>>
function main(): void {
  // ISSUE: This file does not exist.
  //--require 'ipv6_skipif.inc';

  die('skip This test no longer works');

  if (!extension_loaded('sockets')) {
    die('skip The sockets extension is not loaded.');
  }

  if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Not valid for Windows');
  }
}
